# deep_ccf_registration

./: pyproject.toml
scripts/: convert_tissue_bboxes_to_parquet.py  create_point_map.py  data_aug.py  debug_3d_reg.ipynb  explore_scratch.ipynb  get_ccf_midline.py  get_input_space_midline.py  get_tissue_bounding_box.py  get_train_meta.py  oblique_slices.ipynb  performance.ipynb  performance_eval.py  point_transformation_to_ome_zarr.py  qc_experiments.ipynb  qc_experiments.py  qc_over_time.py  submit_get_input_midline.py  submit_get_tissue_bboxes.py  submit_qc_capsule.py  submit_transform_to_ome_zarr.py  viz_error_distribution.py  viz_pred_annotations.py
scripts/smartspim/: coord_transform.ipynb  data_explore.ipynb  runtime.ipynb
src/deep_ccf_registration/: create_train_val_test_split.py  inference.py  metadata.py  models.py  run.py  train.py
src/deep_ccf_registration/configs/: train_config.py
src/deep_ccf_registration/datasets/: aquisition_meta.py  chunk_dataset.py  collation.py  data_aug.py  iterable_slice_dataset.py  slice_dataset.py  slice_dataset_cache.py  subject_slice_sampler.py  template_meta.py  transforms.py
src/deep_ccf_registration/datasets/utils/: interpolation.py  template_points.py
src/deep_ccf_registration/losses/: __init__.py  coord_loss.py  mse.py  point_distance_loss.py
src/deep_ccf_registration/metrics/: point_wise_rmse.py
src/deep_ccf_registration/models/: unet.py
src/deep_ccf_registration/utils/: dataloading.py  ddp.py  evaluation.py  interpolation.py  logging_utils.py  losses.py  metrics.py  sampler.py  tensorstore_utils.py  transforms.py  utils.py  visualization.py
tests/: test_inference.py
tests/datasets/: test_slice_dataset.py
tests/losses/: test_coord_loss.py
tests/utils/: test_interpolation.py  test_transforms.py
